header footer issue fixed, overflow hidden

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -120,7 +120,7 @@ header {
             border-radius: 5px;
             cursor: pointer;
             height: 26px;
-            margin-top: 5px;
+            margin-top: 7px;
             width: 80px;
             float: right;
             text-align: center;
