--- a/src/app/components/item/comment/comment.component.scss
+++ b/src/app/components/item/comment/comment.component.scss
@@ -15,6 +15,7 @@
         margin-top: 10px;
         font-size: 14px;
         line-height: 20px;
+        overflow: scroll;
     }
     .comment-wrapper {
         padding-top: 20px;
@@ -24,7 +25,7 @@
         .toggle {
             background: #fff;
             top: -9px;
-            left: 30px;
+            left: 20px;
             position: absolute;
             cursor: pointer;
             span {
@@ -38,7 +39,7 @@
                 font-size: 20px;
                 padding-top: 4px;
                 top: -6px;
-                left: -32px;
+                left: -20px;
                 padding-left: 1px;
                 -webkit-transform: rotate(90deg);
                 transform: rotate(90deg);
